# netlink-rs

./: .gitignore  Cargo.toml  README.md
examples/dump_main_route_table/: Cargo.toml
examples/dump_main_route_table/src/: main.rs
examples/helloworld/: Cargo.toml
examples/helloworld/src/: main.rs
examples/list_links/: Cargo.toml
examples/list_links/src/: main.rs
examples/list_routes/: Cargo.toml
examples/manual/: Cargo.toml
examples/manual/src/: main.rs
examples/scratch/: Cargo.toml
examples/scratch/src/: withlibc.rs
netlink/: Cargo.toml
netlink/src/: lib.rs
scratch/src/: lib.rs  withnix.rs  withnix2.rs
src/: error.rs  lib.rs  main.rs  reader.rs  withnix2.rs
src/bytes/: align.rs  deserialize.rs  mod.rs  reader.rs
src/core/: align.rs  constants.rs  messages.rs  mod.rs  socket.rs  types.rs
src/generic/: mod.rs
src/netlink/: if_addr.rs  mod.rs
src/route/: client.rs  constants.rs  messages.rs  mod.rs  route.rs  types.rs
src/route/addr/: types.rs
src/route/link/: client.rs  mod.rs  types.rs
src/route/route/: client.rs  types.rs
