[package]
name = "netlink"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = "0.26.2"
tokio = { version = "1.28.2", features = ["full"] }
thiserror = "1.0.40"
linux-raw-sys = { version = "0.4.3", features = ["netlink"] }
bincode = "1.3.3"
serde = { version = "1.0.164", features = ["derive"] }
libc = "0.2.146"
logger = { path = "/home/harry/Documents/lib/logger" }
log = "0.4.19"