[package]
name = "netlink"
version = "0.1.0"
edition = "2021"

[features]
default = ["route"]
route = []

[dependencies]
nix = "0.26.2"
thiserror = "1.0.40"
bincode = "1.3.3"
serde = { version = "1.0.164", features = ["derive"] }
# Development
logger = { path = "/home/harry/Documents/lib/logger" }
log = "0.4.19"
