[package]
name = "netlink"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/harrisonturton/netlink-rs"
keywords = ["netlink", "linux", "networking"]
description = "Library for interacting with Linux netlink interfaces"
categories = ["os", "os::linux-apis", "network-programming"]

[dependencies]
nix = "0.26.2"
thiserror = "1.0.40"
bincode = "1.3.3"
serde = { version = "1.0.164", features = ["derive"] }
serde_repr = "0.1"
derive_builder = "0.12.0"
log = "^0.4"